finished desktop video page -- added images for each video, adjusted placement of iframe, completed switching from images to video on mobile, fixed social media icons squishing

--- a/meredithadelaide/sass/style.scss
+++ b/meredithadelaide/sass/style.scss
@@ -179,6 +179,7 @@ header{
 	height:100%;
 	width:100%;
 	overflow-x:scroll;
+	overflow-y:hidden;
 }
 
 #content{
@@ -257,6 +258,14 @@ footer{
 
 iframe{
 	position:relative;
+}
+
+@media(max-width: 960px) and (min-width:800px){
+	footer{
+		li{
+			padding:0;
+		}
+	}
 }
 
 @media(max-width: 799px){
